# CSI300-AlphaMamba

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  index.html  init.sh  predict.sh  pyproject.toml  test.sh  train.sh
.github/workflows/: deploy.yml
assets/: index-BAg7dxNa.js  index-BXtwZMgx.css
backend/: main.py  start.sh
backend/api/: backtest.py  market.py  predict.py  snapshots.py
backend/schemas/: models.py
backend/services/: engine.py  performance.py  snapshot.py
code/src/: backtest.py  backtest_consensus.py  backtest_meta_ranker.py  backtest_phase7.py  compare_models.py  config.py  features.py  features_hybrid.py  features_phase2.py  features_phase3.py  features_phase4.py  features_phase6.py  features_phase6b.py  featurework.py  portfolio_optimizer.py  predict.py  predict_consensus.py  predict_meta_ranker.py  predict_phase6.py  predict_phase6b.py  predict_phase7.py  test.py  train.py  train_lgb.py  train_lgb_phase6.py  train_lgb_phase6b.py  (+2 more)
data/: run.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
output/: result.csv
snapshots/: 2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-06.json  2026-05-07.json  2026-05-08.json
src/: meta_ranker.py
(+41 files in other folders)
