[project]
name = "alpha-ensemble"
version = "0.2.0"
description = "Consensus Alpha — Regime-Split LGB + Meta Ranker for CSI 300 stock selection"
requires-python = ">=3.10,<3.13"
dependencies = [
    "lightgbm>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "ta-lib>=0.6",
    "joblib>=1.3",
    "tqdm>=4.65",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
